--- a/config.json
+++ b/config.json
@@ -1,4 +1,7 @@
 {
 	"prefix": ";",
-	"token": "ODA5NjY1MjUyMTEwMjM3Njk2.YCYZhg.1rZdis370GIkqmC248RwArALDjI"
+	"token": "ODA5NjY1MjUyMTEwMjM3Njk2.YCYZhg.ICPuWa20VPV0v7SkFS-3zSAO46s",
+	"serverid": "774573137253761037",
+	"serverid_": "711497841880596552",
+	"channid": "778648117158740071"
 }
