--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"prefix" : ";",
+	"prefix" : "$",
 	"token" : "ODA5NjY1MjUyMTEwMjM3Njk2.YCYZhg.ICPuWa20VPV0v7SkFS-3zSAO46s",
 	"serverid" : "774573137253761037",
 	"log_chnn" : "809850441562193940",
