--- a/config.json
+++ b/config.json
@@ -1,8 +1,7 @@
 {
-	"prefix" : "$",
+	"prefix" : ";",
 	"token" : "ODA5NjY1MjUyMTEwMjM3Njk2.YCYZhg.ICPuWa20VPV0v7SkFS-3zSAO46s",
 	"serverid" : "774573137253761037",
 	"log_chnn" : "809850441562193940",
-	"serverid_test" : "711497841880596552",
-	"test_log_chnn" : "789092658311593994"
+	"role_id" : "778532539287207956"
 }
